syntax = "proto2";

package cz.yb.protobuf;

option java_package = "cz.yb.protobuf";
option java_outer_classname = "DataInfo";

message MyMessage {
  enum  DataType{
    PersonType=1;
    DogType=2;
    CatType=3;
  }

  required  DataType data_type =1 ;
  oneof  dataBody {
    Person person =2 ;
    Dog dog =3;
    Cat cat =4;
  }

}
message Student {
  optional string name = 1;
  optional int32 age = 2;
  optional string address = 3;
}

message Person {
  optional string name = 1;
  optional int32 age = 2;
  optional string address = 3;
}

message Dog {
  optional string name = 1;
  optional int32 age = 2;
}

message Cat {
  optional string name = 1;
  optional string city = 2;
}
